### CHANGELOG FORMAT:
yyyy-mm-dd Your Name <your@email.com>
	* file ( method in file ) : changes.
###

2019-03-09 Johannes Textor <johannes.textor@gmx.de>
	* examples/ : changed all examples to new syntax, added perimeter
	constraint where missing

2019-03-09 Inge Wortel <ingewortel@gmail.com>
	* hamiltonian/ActivityConstraint2.js : Added new implementation of the activity
	constraint that directly tracks activity values in an object instead of their birth
	time. This implementation should be more efficient because pixels are removed once
	their activity reaches zero.
		!!! We may want to make a test that checks if two implementations do the same
		thing?
	* app/index.js : use ActivityConstraint2.js instead of ActivityConstraint.js for
	the build.
	* examples/actmodel.html : fixed bug because of change in CPM.js file. Added a 
	perimeter constraint to the cell.

2019-03-09 Johannes Textor <johannes.textor@gmx.de>
	* hamiltonian/Constraint.js : new base class for all constraints
	* CPM.js: renamed addTerm to simply "add" -- we may want to add other
	things like loggers, trackers, drawing functions. Also fixed bug in
	cellBorderPixels
	* hamiltonian/PersistenceConstraint.js : works now

2019-03-08 Inge Wortel <ingewortel@gmail.com>
	* CPM.js : wrapped grid.neighi as an internal function here.
	* hamiltonian/ActivityConstraint.js : Added this file.
	* app/index.js : added Activity Constraint to the build.
	* Canvas.js : fixed code for displaying the activity model
	* examples/actmodel.html : added an example with act model (this doesn't work
	properly yet, as the cell needs a perimeter constraint to stay together).

2019-03-08 Johannes Textor <johannes.textor@gmx.de>
	* CPM.js : added listener stubs for pixel changes and MCS termination
	* TestLogger.js : new file for simple logging of events, to check if
	this works

2019-03-08 Inge Wortel <ingewortel@gmail.com>
	* Makefile : changed call to rollup to a direct call to the rollup binary in 